this is a commit to roll back prior to. contactme layout issues, going back to mediaqueries branch

--- a/css/contactme.css
+++ b/css/contactme.css
@@ -1,11 +1,14 @@
 .contactpage {
   width: 100vw;
-  height: 30vh;
+  height: 50vh;
   margin: 5px 0 5px 0;
+  margin-bottom: 150px;
+  padding-bottom: 150px;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   background-color: blue;
+  border: 1px solid green;
 }
 
 h3 {
@@ -20,7 +23,8 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* margin-top: 100px; */
+  height: 50vh;
   width: 100vw;
   background-color: yellow;
 }
@@ -28,15 +32,16 @@ h3 {
 form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
-  width: 60vw;
-  height: 50vh;
+  width: 95vw;
+  height: 65vh;
   padding-right: 120px;
-  background-image: url(/design/kingproteas-opaque.png);
+  /* background-image: url(/design/kingproteas-opaque.png);
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
   border: 1px solid red;
+  background-color: pink;
 }
 
 form h5 {
@@ -58,7 +63,6 @@ form label {
 
 form p {
   font-size: 18px;
-  /* padding-bottom: 50px; */
 }
 
 input {
